syntax = "proto3";
package recruitment.service;

option java_multiple_files = true;
option java_package = "dev.ngdangkiet.dkmicroservices.recruitment.service";
option java_outer_classname = "ApplicantServiceAPI";

import "recruitment-service/applicant/shared.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "common/shared.proto";

service ApplicantService {

  rpc upsertApplicant (PApplicant) returns (google.protobuf.Int64Value);
  rpc getApplicantById (google.protobuf.Int64Value) returns (PApplicantResponse);
  rpc getApplicants (PGetApplicantsRequest) returns (PGetApplicantsResponse);
  rpc deleteApplicantById (google.protobuf.Int64Value) returns (common.protobuf.EmptyResponse);
}